--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-09-09  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimppdbdialog.c (gimp_pdb_dialog_constructor): use
+	g_type_name(dialog_type) instead of just "pdb dialog" as name for
+	the dialog's private context.
+
+2004-09-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/convert-dialog.[ch] (convert_dialog_new): changed
 	GimpDisplay* parameter to GimpProgress* because that's what it's
 	used for.
