2004-09-09  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpviewrendererbrush.c
	* app/widgets/gimpviewrendererdrawable.c
	* app/widgets/gimpviewrenderergradient.c
	* app/widgets/gimpviewrendererimage.c
	* app/widgets/gimpviewrendererimagefile.c
	* app/widgets/gimpviewrendererlayer.c
	* app/widgets/gimpviewrenderervectors.c: purely cosmetic cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14675 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-09-09  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpviewrendererbrush.c
+	* app/widgets/gimpviewrendererdrawable.c
+	* app/widgets/gimpviewrenderergradient.c
+	* app/widgets/gimpviewrendererimage.c
+	* app/widgets/gimpviewrendererimagefile.c
+	* app/widgets/gimpviewrendererlayer.c
+	* app/widgets/gimpviewrenderervectors.c: purely cosmetic cleanup.
+
+2004-09-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimppdbdialog.c (gimp_pdb_dialog_constructor): use
 	g_type_name(dialog_type) instead of just "pdb dialog" as name for
 	the dialog's private context.
