* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_blend)   (gimp_preview_area_mask): optimized the case where both buffers have   the same alpha for a given pixel.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14676 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-09  DindinX  <david@dindinx.org>
+
+	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_blend)
+	(gimp_preview_area_mask): optimized the case where both buffers have
+	the same alpha for a given pixel.
+
 2004-09-09  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpviewrendererbrush.c
