2004-09-09  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablepreview.c
	* libgimpwidgets/gimppreview.[ch]: added a navigation popup
	similar to the one in the image window. Needs some more work.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14682 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-09  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.c
+	* libgimpwidgets/gimppreview.[ch]: added a navigation popup
+	similar to the one in the image window. Needs some more work.
+
 2004-09-09  DindinX  <david@dindinx.org>
 
 	* libgimpwidgets/gimppreviewarea.c: added a utility function
