2004-09-10  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.c
	* libgimpwidgets/gimppreviewarea.c: documented new functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14684 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimppreview.sgml	
+	* libgimpwidgets/tmpl/gimppreviewarea.sgml: updated for new
+	preview APIs.
+
 2004-09-07  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
