--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreview.c
+	* libgimpwidgets/gimppreviewarea.c: documented new functions.
+
 2004-09-09  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpdrawablepreview.c
