2004-09-10  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.c: fixed positioning of the
	navigation marker and handling of motion events.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14685 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-10  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreview.c: fixed positioning of the
+	navigation marker and handling of motion events.
+
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreview.c
 	* libgimpwidgets/gimppreviewarea.c: documented new functions.
 
