--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-10  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/xpm.c: improved PDB blurb and help. Very loosely
+	based on a patch attached to bug #151912.
+
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_thumb):
 	also handle GRAY and GRAYA thumbnails.
 
