2004-09-10  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolorselect.c: ported to GimpPreviewArea.
	Destroy the GdkGC in unrealize() instead of in finalize().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14689 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpcolorselect.c: ported to GimpPreviewArea.
+	Destroy the GdkGC in unrealize() instead of in finalize().
+
 2004-09-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainertreeview-dnd.c
