--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-10  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpcolorselect.c: untabified, removed useless
+	inclusion of <gdk/gdkkeysyms.h>.
+
 2004-09-10  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpcolorselect.c: ported to GimpPreviewArea.
