--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/widgets/gimperrorconsole.c: fix typo
+
 2004-09-10  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolorselect.c: untabified, removed useless
