--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-10  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/xpm.c (query): fixed spelling.
+
 2004-09-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/widgets/gimperrorconsole.c: fix typo
