--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-11  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/oilify.c: some code cleanup and small optimisations.
+
 2004-09-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/xpm.c (query): fixed spelling.
