* plug-ins/common/edge.c: ported to GimpPreviewArea. 100 less lines of   code and much more features!
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14697 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-11  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/edge.c: ported to GimpPreviewArea. 100 less lines of
+	code and much more features!
+
+2004-09-11  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/oilify.c: some code cleanup and small optimisations.
 
 2004-09-10  Sven Neumann  <sven@gimp.org>
