* libgimp/gimppixelrgn.c: added some gtk-doc documentation to pixel   region related functions. (work in progress)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14699 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-11  DindinX  <david@dindinx.org>
+
+	* libgimp/gimppixelrgn.c: added some gtk-doc documentation to pixel
+	region related functions. (work in progress)
+
 2004-09-11  Simon Budig  <simon@gimp.org>
 
 	* app/widgets/gimpdialogfactory.[ch]: Added boolean parameter to
