--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  DindinX  <david@dindinx.org>
+
+	* libgimp/gimppixelrgn.c: more documentation.
+
 2004-09-11  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/edge.c: added a default value (TRUE) for the
