* libgimp/gimppixelrgn.c: nomis helped me to make some correction to   the documentation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14702 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-12  DindinX  <david@dindinx.org>
 
+	* libgimp/gimppixelrgn.c: nomis helped me to make some correction to
+	the documentation.
+
+2004-09-12  DindinX  <david@dindinx.org>
+
 	* libgimp/gimppixelrgn.c: more documentation.
 
 2004-09-11  DindinX  <david@dindinx.org>
