* libgimp/gimppixelrgn.c: some more fixes by nomis.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14703 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-12  DindinX  <david@dindinx.org>
 
+	* libgimp/gimppixelrgn.c: some more fixes by nomis.
+
+2004-09-12  DindinX  <david@dindinx.org>
+
 	* libgimp/gimppixelrgn.c: nomis helped me to make some correction to
 	the documentation.
 
