--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-12  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimppixelrgn.c: fixed gtk-doc comments, removed trailing
+	whitespace.
+
 2004-09-12  DindinX  <david@dindinx.org>
 
 	* libgimp/gimppixelrgn.c: some more fixes by nomis.
