2004-09-12  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/aa.c (aa_dialog): use a combo box for format
	selection.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14705 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-12  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/aa.c (aa_dialog): use a combo box for format
+	selection.
+
+2004-09-12  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimppixelrgn.c: fixed gtk-doc comments, removed trailing
 	whitespace.
 
