2004-09-12  Nathan Summers  <rock@gimp.org>
        * app/tools/gimpcroptool.c: disable crop and resize buttons while the
	operation is being processed.  Fixes #152372.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14706 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-12  Nathan Summers  <rock@gimp.org>
+
+	* app/tools/gimpcroptool.c: disable crop and resize buttons while the 
+	operation is being processed.  Fixes #152372.
+
 2004-09-12  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/aa.c (aa_dialog): use a combo box for format
