2004-09-13  Simon Budig  <simon@gimp.org>
	* app/tools/gimpcroptool.c: Fix warnings and coding style.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14707 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-13  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpcroptool.c: Fix warnings and coding style.
+
 2004-09-12  Nathan Summers  <rock@gimp.org>
 
 	* app/tools/gimpcroptool.c: disable crop and resize buttons while the 
