2004-09-13  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphelp.c: simulate the behaviour of GNU gettext and
	look at the LANGUAGE environment variable if the locale is not "C".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14709 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-13  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp.c: simulate the behaviour of GNU gettext and
+	look at the LANGUAGE environment variable if the locale is not "C".
+
 2004-09-13  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpcroptool.c: Fix trailing whitespace introduced by me.
