--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-13  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILE.in: dialog sources were moved to app/dialogs/.
+
 2004-09-06  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
