--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-13  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/jpeg.c: some code cleanup.
+
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/dialogs/file-open-dialog.[ch]: removed function
