forgot to mention fixed bug.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14719 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
+	Manage the file-save dialog using the dialog factory and stop
+	making menu items insensitive while it is open. Fixes bug #81407.
+
 	* app/dialogs/Makefile.am
 	* app/dialogs/file-dialog-utils.[ch]: removed these files.
 
