2004-09-13  Michael Natterer  <mitch@gimp.org>
	* app/actions/file-commands.c: resurrected file_open_dialog_show()
	and file_save_dialog_show() as private utility functions to get
	rid of code duplication.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14720 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/file-commands.c: resurrected file_open_dialog_show()
+	and file_save_dialog_show() as private utility functions to get
+	rid of code duplication.
+
+2004-09-13  Michael Natterer  <mitch@gimp.org>
+
 	Manage the file-save dialog using the dialog factory and stop
 	making menu items insensitive while it is open. Fixes bug #81407.
 
