--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-13  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/jpeg.c (save_dialog): make the "Save EXIF data"
+	toggle insensitive when no EXIF data is present (bug #140042).
+
+	* app/display/gimpdisplayshell-close.c: as suggested by the HIG,
+	ask the user to save the image when the last display is being
+	closed. Addresses some issues raised in bug #106726.
+
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/app_procs.c (app_run): install the message handler for the
