--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-09-14  Sven Neumann  <sven@gimp.org>
+
+	* app/dialogs/dialogs-constructors.[ch]
+	* app/dialogs/dialogs.c
+	* app/gui/gui.c: let the dialog factory handle the quit dialog
+	as singleton. Fixes bug #151914.
+
+	* app/dialogs/quit-dialog.c: added a warning here. We need a
+	container of dirty images for the above change to work correctly.
+
 2004-09-13  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/jpeg.c (save_dialog): make the "Save EXIF data"
