2004-09-14  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated for the remaining Preview -> View changes
	and the new app/dialogs/ module.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14724 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/Makefile.am
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated for the remaining Preview -> View changes
+	and the new app/dialogs/ module.
+
 2004-09-10  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
