2004-09-15  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_menu_position): improved the fix for bug
	#152662 and removed trailing whitespace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14731 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-15  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcontainertreeview.c
+	(gimp_container_tree_view_menu_position): improved the fix for bug
+	#152662 and removed trailing whitespace.
+
 2004-09-15  Nathan Summers  <rock@gimp.org>
 
 	* app/widgets/gimpcontainertreeview.c 
