2004-09-15  Manish Singh  <yosh@gimp.org>
        * modules/controller_linux_input.c: use guint16 instead of __u16.
        Should fix bug #152746.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14736 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-15  Manish Singh  <yosh@gimp.org>
+
+	* modules/controller_linux_input.c: use guint16 instead of __u16.
+	Should fix bug #152746.
+
 2004-09-15  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpdrawablepreview.[ch]
