* plug-ins/common/mblur.c: fix the preview for the zoom blur mode.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14738 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-15  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/mblur.c: fix the preview for the zoom blur mode.
+
 2004-09-15  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.c
